# src/http/routes/authenticate-from-github.ts
@@ -11,6 +11,7 @@ export const authenticateFromGithubRoute: FastifyPluginAsyncZod = async (
       schema: {
         tags: ['auth'],
         description: 'Authenticate user from Github code',
+        operationId: 'authenticateFromGithub',
         body: z.object({
           code: z.string(),
         }),
