# src/http/routes/get-pending-goals.ts
@@ -11,6 +11,7 @@ export const getPendingGoalsRoute: FastifyPluginAsyncZod = async (app) => {
       schema: {
         tags: ['goals'],
         description: 'Get pending goals',
+        operationId: 'getPendingGoals',
         response: {
           200: z.object({
             pendingGoals: z.array(
