# src/http/routes/get-profile.ts
@@ -11,6 +11,7 @@ export const getProfileRoute: FastifyPluginAsyncZod = async (app) => {
         onRequest: [authenticateUserHook],
         tags: ['auth'],
         description: 'Get authenticated user profile',
+        operationId: 'getProfile',
         response: {
           200: z.object({
             profile: z.object({
