# src/http/routes/get-week-summary.ts
@@ -12,6 +12,7 @@ export const getWeekSummaryRoute: FastifyPluginAsyncZod = async (app) => {
       schema: {
         tags: ['goals'],
         description: 'Get week summary',
+        operationId: 'getWeekSummary',
         querystring: z.object({
           weekStartsAt: z.coerce
             .date()
